[package]
name = "rolox"
version = "0.1.0"
authors = ["SarcasticNastik <aman.rojjha@research.iiit.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rustyline = "8.2.0"
phf = { version = "0.9", features = ["macros"]}